--- a/hchuck.cabal
+++ b/hchuck.cabal
@@ -31,6 +31,7 @@ executable hchuck
 
     -- Other library packages from which modules are imported.
     build-depends:    base ^>=4.18.1.0
+                      , http-conduit
 
     hs-source-dirs:   app
     default-language: Haskell2010
