increase base version range

--- a/hchuck.cabal
+++ b/hchuck.cabal
@@ -30,7 +30,7 @@ executable hchuck
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.19.0.0
+    build-depends:    base >4.15 && <5
                       , wreq
                       , lens
                       , lens-aeson
