--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,21 +17,21 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        cabal: ["3.6.2.0"]
+        cabal: ["3.10.2.1"]
         ghc:
-          - "8.10.7"
-          - "9.0.2"
-          - "9.2.1"
+          - "9.4"
+          - "9.6"
+          - "9.8"
         exclude:
           - os: macOS-latest
-            ghc: 9.0.2
+            ghc: 9.6
           - os: macOS-latest
-            ghc: 8.10.7
+            ghc: 9.4
 
           - os: windows-latest
-            ghc: 9.0.2
+            ghc: 9.6
           - os: windows-latest
-            ghc: 8.10.7
+            ghc: 9.4
 
     steps:
     - uses: actions/checkout@v2
@@ -73,37 +73,37 @@ jobs:
       run: |
         cabal haddock
 
-  stack:
-    name: stack / ghc ${{ matrix.ghc }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        stack: ["2.7.3"]
-        ghc: ["8.10.7"]
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - uses: haskell/actions/setup@v1.2
-      name: Setup Haskell Stack
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        stack-version: ${{ matrix.stack }}
-
-    - uses: actions/cache@v2
-      name: Cache ~/.stack
-      with:
-        path: ~/.stack
-        key: ${{ runner.os }}-${{ matrix.ghc }}-stack
-
-    - name: Install dependencies
-      run: |
-        stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
-
-    - name: Build
-      run: |
-        stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
-
-    - name: Test
-      run: |
-        stack test --system-ghc
+  # stack:
+  #   name: stack / ghc ${{ matrix.ghc }}
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       stack: ["2.7.3"]
+  #       ghc: ["8.10.7"]
+  #
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #
+  #   - uses: haskell/actions/setup@v1.2
+  #     name: Setup Haskell Stack
+  #     with:
+  #       ghc-version: ${{ matrix.ghc }}
+  #       stack-version: ${{ matrix.stack }}
+  #
+  #   - uses: actions/cache@v2
+  #     name: Cache ~/.stack
+  #     with:
+  #       path: ~/.stack
+  #       key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+  #
+  #   - name: Install dependencies
+  #     run: |
+  #       stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks --only-dependencies
+  #
+  #   - name: Build
+  #     run: |
+  #       stack build --system-ghc --test --bench --no-run-tests --no-run-benchmarks
+  #
+  #   - name: Test
+  #     run: |
+  #       stack test --system-ghc
