--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,7 @@ jobs:
             ghc-version: '9.8'
           - os: macos-latest
             ghc-version: '9.8'
+            extention: .exe
 
     steps:
       - uses: actions/checkout@v4
@@ -88,3 +89,9 @@ jobs:
 
       - name: Install binary
         run: cabal install --installdir artefact/${{ matrix.os }} --install-method copy
+
+      - name: Compress
+        uses: svenstaro/upx-action@v2
+        with:
+          file: artefact/${{ matrix.os }}/hchuck${{ matrix.extension }}
+
