--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         ghc-version: ['9.8']
 
         include:
-          - os: [ubuntu-latest]
+          - os: ubuntu-latest
             upx-args: --best --lzma
             strip: true
           - os: windows-latest
