--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os: ['ubuntu-latest', 'windows-latest', 'macos-latest']
         ghc-version: ['9.8']
 
         include:
