add release job

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,3 +106,42 @@ jobs:
           path: artifact
           name: hchuck-${{ github.sha }}
 
+  release:
+    needs: build
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/checkout@v2
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: hchuck-${{ github.sha }}
+          path: artifact
+
+      - uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_content_type: application/octet-stream
+          asset_name: hchuck-${{ github.event.release.tag_name }}-ubuntu
+          asset_path: artifact/ubuntu-latest/hchuck
+          upload_url: ${{ github.event.release.upload_url }}
+
+      - uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_content_type: application/octet-stream
+          asset_name: hchuck-${{ github.event.release.tag_name }}-macos
+          asset_path: artifact/macos-latest/hchuck
+          upload_url: ${{ github.event.release.upload_url }}
+
+      - uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          asset_content_type: application/octet-stream
+          asset_name: hchuck-${{ github.event.release.tag_name }}-windows.exe
+          asset_path: artifact/windows-latest/hchuck.exe
+          upload_url: ${{ github.event.release.upload_url }}
