--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,12 @@
 name: build
 on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
-  release:
-    types:
-      - created
+  push
+  #   branches: [main, master]
+  # pull_request:
+  #   branches: [main, master]
+  # release:
+  #   types:
+  #     - created
 
 # INFO: The following configuration block ensures that only one build runs per branch,
 # which may be desirable for projects with a costly build process.
