restore exe bit

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -114,6 +114,7 @@ jobs:
 
       - name: Zip artifacts
         run: |
+          find ./artifact -type f -exec chmod a+x {} \;
           zip -j artifact/hchuck-${{ github.ref_name }}-ubuntu.zip artifact/ubuntu-latest/hchuck
           zip -j artifact/hchuck-${{ github.ref_name }}-windows.zip artifact/windows-latest/hchuck.exe
           zip -j artifact/hchuck-${{ github.ref_name }}-macos.zip artifact/windows-latest/hchuck
