--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,8 +97,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
+          name: hchuck-${{ github.sha }}
           path: artifact
-          # name: hchuck-${{ github.sha }}
 
   release:
     needs: build
@@ -109,7 +109,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          # name: hchuck-${{ github.sha }}
+          name: hchuck-${{ github.sha }}
           path: artifact
 
       - name: Zip artifacts
